--- a/src/components/Footer/FooterStyles.css
+++ b/src/components/Footer/FooterStyles.css
@@ -52,7 +52,7 @@
   margin-bottom: 20px;
   font-size: 13px;
 }
-.footer-country{
-   color: #757575;
-   margin-top: 24px;
+.footer-wrapper{
+  color: #757575;
+  margin-top: 24px;
 }
