--- a/src/components/Header/HeaderStyles.css
+++ b/src/components/Header/HeaderStyles.css
@@ -1,4 +1,4 @@
-/*  Header Section */
+/* Header Section */
 
 .header-wrapper-home {
   background: url("/images/misc/home-bg.jpg");
@@ -56,8 +56,8 @@
 }
 
 .logo {
-  height: 80px;
-  width: 145px;
+  height: 60px;
+  width: 180px;
 }
 
 .signin-button {
@@ -75,11 +75,11 @@
 
 .header-link,
 .header-link-bold {
-  padding: 10px;
+  padding: 5px;
 }
 
 .header-link a {
-  color: whitesmoke;
+  color: #fff;
   margin-left: 25px;
   cursor: pointer;
 }
