--- a/src/components/OptForm/OptFormStyles.css
+++ b/src/components/OptForm/OptFormStyles.css
@@ -1,4 +1,4 @@
-/*  OptForm Section */
+/* OptForm Section */
 
 .optform-wrapper {
   display: flex;
@@ -16,18 +16,18 @@
 }
 
 .optform-email {
-  max-width: 500px;
+  max-width: 450px;
   width: 100%;
   border: 0;
   padding: 10px;
-  height: 55px;
+  height: 80px;
   font-size: 20px;
 }
 
 .optform-button {
   width: fit-content;
-  height: 55px;
-  background: #e50914;
+  height: 80px;
+  background: red;
   color: #fff;
   text-transform: uppercase;
   padding: 0 32px;
